WIP Added favicon Added placeholder pages Added component to print/export lesson plan

--- a/src/styles/print.scss
+++ b/src/styles/print.scss
@@ -3,16 +3,6 @@
     display: none !important;
   }
 
-  body {
-    margin: 0;
-    padding: 0;
-  }
-
-  .container {
-    max-width: 100% !important;
-    width: 100% !important;
-  }
-
   .page-break {
     break-before: page;
     page-break-before: always;
@@ -21,5 +11,24 @@
   .avoid-break {
     break-inside: avoid;
     page-break-inside: avoid;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  body,
+  html {
+    overflow: visible !important;
+  }
+
+  .container,
+  main {
+    min-height: auto !important;
+    height: auto !important;
+    overflow: visible !important;
+    max-width: 100% !important;
+    width: 100% !important;
   }
 }
