Small fixes and cleanup Added 404 page Improved printing by trying to keep relevant blocks together (question and options)

--- a/src/styles/print.scss
+++ b/src/styles/print.scss
@@ -13,6 +13,11 @@
     page-break-inside: avoid;
   }
 
+  .keep-together {
+    break-inside: avoid;
+    page-break-inside: avoid;
+  }
+
   body {
     margin: 0;
     padding: 0;
